# OnionRepresentation

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-local.yml  requirements.txt
deployment/: Dockerfile  Makefile  docker-compose-local.yml  entrypoint.sh
onion_app/: pyproject.toml  setup.cfg
onion_app/adapters/alembic/: launcher.py  runners.py  settings.py
onion_app/adapters/api/: controllers.py  exception_handlers.py  settings.py
onion_app/adapters/database/: models.py  repositories.py  settings.py
onion_app/adapters/database/migrations/: env.py
onion_app/adapters/database/migrations/versions/: ed88c4a88785_initial_commit.py
onion_app/adapters/logging/: __init__.py  alembic.py  configs.py
onion_app/adapters/scheduler/: runner.py  settings.py
onion_app/adapters/source_api/: constatns.py  repositories.py  settings.py
onion_app/application/: exceptions.py  interfaces.py
onion_app/application/ETL/: interfaces.py  services.py
onion_app/composites/: app.py
onion_app/composites/alembic/: __main__.py  env.py
src/: alembic.ini  entrypoint.sh  exception_handlers.py  main.py
src/adapters/dashboard/: api.py
src/adapters/db/: models.py  repositories.py  services.py  settings.py
src/adapters/scheduler/: decorators.py  repositories.py  settings.py
src/adapters/source_api/: repositories.py  services.py  settings.py
src/application/: interfaces.py
src/application/ETL/: dto.py  services.py
src/composites/: aiohttp_session.py  app.py  settings_app.py  utils.py
src/composites/database/: postgres_db.py
src/composites/database/migrations/: env.py
(+1 files in other folders)
