[metadata]
name = onion_application
version = 0.0.1
description = Учебный проект построенный по Hexagonal architecture
author = Nikita Lyakhov, Pukhov Oleg, Boyushenko Aleksandr
author_email = n.liakhov@wis.software, a.boyushenko@wis.software, o.pukhov@wis.software
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = ~=3.9.0

install_requires =
    aiohttp==3.8.4
    aiosignal==1.3.1
    alembic==1.11.1
    anyio==3.6.2
    async-timeout==4.0.2
    asyncpg==0.27.0
    asyncpgsa==0.27.1
    attrs==23.1.0
    certifi==2023.5.7
    charset-normalizer==3.1.0
    click==8.1.3
    dnspython==2.3.0
    email-validator==2.0.0.post2
    fastapi==0.95.2
    fastapi-utils==0.2.1
    frozenlist==1.3.3
    greenlet==2.0.2
    h11==0.14.0
    httpcore==0.17.1
    httptools==0.5.0
    httpx==0.24.1
    idna==3.4
    itsdangerous==2.1.2
    Jinja2==3.1.2
    Mako==1.2.4
    MarkupSafe==2.1.2
    multidict==6.0.4
    orjson==3.8.12
    psycopg2-binary==2.9.6
    pydantic==1.10.7
    python-dotenv==1.0.0
    python-multipart==0.0.6
    PyYAML==6.0
    sniffio==1.3.0
    SQLAlchemy==1.4.48
    starlette==0.27.0
    typing_extensions==4.6.0
    ujson==5.7.0
    uvicorn==0.22.0
    uvloop==0.17.0
    watchfiles==0.19.0
    websockets==11.0.3
    yarl==1.9.2

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    wheel~=0.36.2
    isort~=5.10.0
    yapf~=0.32.0
    toml~=0.10.2
    twine~=3.4.2
    build~=0.7.0
    flake8~=5.0.4
    Flake8-pyproject~=1.2.2
